# xetex

./: .gitignore  Build  COPYING  INSTALL  Makefile.in  NEWS  README  TODO  a309-iuc27-abstract.txt  a309-iuc27.tex  autogen.sh  b80-tweaked.xdv  b80.tex  b80.xdv  build-xetex  build-xetex-osx10.6.sh  build-xetex.sh  build.sh  configure  configure.ac  configure.in  figure-biblio.tex  figure-scripture.tex  figure-sorting-a.tex  figure-sorting-b.tex  foo  hack  install-xetex  putc-int  putc-int.c  reautoconf  rebuild-formats  runConfigure.sh  tetex.ac  tex-icon.tiff  texlogo.vfb  wc  wc.c  xetex0.c
TRUNK/: TODO  build-xetex  (+3 more)
TeX/texk/afm2pl/: ChangeLog  Makefile.in  README  afm2pl.c  c-auto.in  configure  configure.in  win32.mak
TeX/texk/dviljk/: Makefile.in  configure  configure.in  depend.mk  dvihp  stamp-auto.in
TeX/texk/dvipdfmx/: BUGS  ChangeLog  Makefile.am  Makefile.in  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  index.html  style.css  style_ie.css  win32.mak
TeX/texk/dvipdfmx/CVS/: Entries  Repository
TeX/texk/dvipdfmx/crypto/: depend.mak  win32.mak
TeX/texk/dvipdfmx/data/: Makefile.am  Makefile.in  win32.mak
TeX/texk/dvipdfmx/src/: Makefile.am  Makefile.in  agl.c  agl.h  cff.c  cff.h  cff_dict.c  cid.c  cid.h  cid_basefont.h  cid_p.h  cidtype0.c  cidtype0.h  cidtype2.c  cidtype2.h  cmap.c  cmap.h  cmap_parse.c  cmap_parse.h  colors.h  colorsp.c  colorsp.h  depend.mak  dpxcrypt.c  dpxutil.c  dpxutil.h  dvi.c  dvi.h  dvipdfmx.c  encodings.c  encodings.h  encodings_p.h  epdf.c  epdf.h  error.c  error.h  fontmap.c  fontmap.h  htex.c  htex.h  (+68 more)
TeX/texk/dvipng/: INSTALL  Makefile.in  Makefile.in-orig  README  RELEASE  acconfig.h  color.c  commands.h  config.h.in  configure  configure.in  depend.mk  draw.c  dvi.c  dvipng.1  dvipng.c  dvipng.h  dvipng.help  dvipng.info  dvipng.texi  enc.c  font.c  fontmap.c  ft.c  install.texi  macros.texi  misc.c  papersiz.c  pk.c  ppagelist.c  readme.texi  set.c  special.c  stamp-auto.in  t1.c  test_dvipng.tex  tfm.c  vf.c
TeX/texk/makeindexk/: Makefile.in  configure  configure.in  depend.mk  genind.c  sortid.c
TeX/texk/ps2pkm/: Makefile.in  configure  configure.in  depend.mk  mag.1  pfb2pfa.1  pk2bm.1  ps2pk.1  stamp-auto.in
libs/: README  configure  configure.in  icu-xetex
libs/graphite-engine/: Makefile.am  Makefile.in  README  configure  configure.ac  graphite-engine.ac  installed-top.pc.in  makefile.vc  silgraphite.pc.in  uninstalled-top.pc.in
libs/graphite-engine/debian/: changelog  control  control.in  libgraphite-dev.docs  libgraphite-dev.install  libgraphite2.shlibs  rules
libs/graphite-engine/doc/: GTF_3_0.odt  GTF_3_0.rtf  V2 Engine Interface.odt  V2 Segment Interface.odt  V2 TextSource Interface.odt  V2_Engine_Interface.odt  V2_Engine_Interface.rtf  V2_Segment_Interface.rtf  V2_TextSource_Interface.rtf  hungarian.txt
libs/graphite-engine/include/: FileFont.h  Font.h  GrAppData.h  GrConstants.h  GrFeature.h  GrPlatform.h  GrStructs.h  Makefile.am  Segment.h  SegmentAux.h  SegmentPainter.h
libs/graphite-engine/include/graphite/: Font.h
libs/graphite-engine/src/: Makefile.am  Makefile.in
libs/graphite-engine/src/font/: FileFont.cpp  Font.cpp  Tt.h  TtFscdefs.h  TtSfnt.h  TtSfnt_en.h  TtfUtil.cpp  TtfUtil.h
libs/graphite-engine/src/generic/: HashMap_i.cpp
libs/graphite-engine/src/painter/: SegmentPainter.cpp
libs/graphite-engine/src/segment/: FileInput.cpp  FontCache.cpp  FontFace.cpp  FontFace.h  GrClassTable.cpp  GrClassTable.h  GrEngine.cpp  GrEngine.h  GrFeature.cpp  GrFeatureValues.h  GrGlyphTable.cpp  GrGlyphTable.h  GrPass.cpp  GrPass.h  GrSlotState.cpp  GrSlotState.h  GrSlotStream.cpp  GrTableManager.cpp  GrTableManager.h  Main.h  Platform.cpp  Segment.cpp  SegmentAux.cpp  TransductionLog.cpp
libs/graphite-engine/test/: Makefile.in
libs/graphite-engine/test/RegressionTest/: GrJustifier.cpp  Makefile.am  Makefile.in  Makefile.vc  RegressionTest.cpp  RtTextSrc.h  SimpleTextSrc.cpp  SimpleTextSrc.h  TestCase.cpp  TestCase.h  makedebug.bat
libs/harfbuzz/: Makefile.am
libs/harfbuzz/ac/: harfbuzz.ac
libs/harfbuzz/harfbuzz-0.9.7-PATCHES/: ChangeLog  opt_size.patch  patch-01-Khaled
libs/harfbuzz/harfbuzz-0.9.7/src/: hb-ot-layout.cc  hb-ot-layout.h
libs/howto/: graphite  ncurses
libs/icu/: configure  configure.ac
libs/icu-release-3-4-source/layout/: GlyphIterator.cpp  KernTable.cpp  LEGlyphStorage.cpp  LEGlyphStorage.h  LayoutEngine.cpp  OpenTypeLayoutEngine.cpp
libs/icu-release-3-6-source/data/coll/: collocal.mk
libs/icu-release-3-6-source/data/locales/: reslocal.mk
libs/icu-release-3-6-source/layout/: KernTable.cpp  OpenTypeLayoutEngine.cpp
libs/icu-release-3-8-1-source/layout/: OpenTypeLayoutEngine.cpp
libs/icu-release-3-8-1-source/test/letest/: gendata.xml
libs/icu-release-3-8-1-source/test/testdata/: letest.xml
libs/icu-release-4-0-source/data/coll/: bn_IN.txt  pa_Arab.txt  pa_Arab_PK.txt  pa_Guru.txt  pa_Guru_IN.txt  ur.txt  ur_IN.txt  ur_PK.txt
libs/icu-release-4-0-source/data/locales/: fr_SN.txt  ha.txt  ha_Latn.txt  ha_Latn_NG.txt  ha_NG.txt  ii.txt  ii_CN.txt  kk_Cyrl.txt  kk_Cyrl_KZ.txt  ne.txt  ne_IN.txt  ne_NP.txt  pa_Arab.txt  pa_Arab_PK.txt  pa_PK.txt  reslocal.mk  si.txt  si_LK.txt  zh_Hans_HK.txt  zh_Hans_MO.txt
libs/icu-release-4-0-source/layout/: ArabicShaping.cpp  GlyphIterator.cpp  LayoutEngine.cpp  OpenTypeLayoutEngine.cpp
libs/icu/icu-4.4.1/: configure.in
libs/icu/icu-4.4.1-PATCHES/: ChangeLog  patch-10-cross-TOOLEXEEXT
libs/obsdcompat/: README
libs/teckit/: Makefile.am  Makefile.in  TECkit.mcp  config.h.in  configure  configure.ac
libs/teckit/autom4te.cache/: output.0  traces.0
libs/teckit/docs/: Makefile.in
libs/teckit/lib/: Makefile.in
libs/teckit/perl_binaries/: Encode-TECkit-0.04-MSWin32-x86-multi-thread-5.8.4.par
libs/teckit/source/: Compiler.h  Engine.cpp.old  Makefile.am  NormalizationData.c  REALplugin.cp  TECkit_Compiler.cmd  TECkit_Engine.cmd
libs/teckit/test/: ISO-8859-1.map  Makefile.in  SILGreek2004-04-27.map  SILGreek2004-04-27.tec.orig
libs/zlib/: Makefile.in
(+1943 files in other folders)
