dnl Process this file with autoconf to produce a configure script.
AC_INIT(afm2pl.c)

AC_CONFIG_HEADER(c-auto.h:c-auto.in)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_LN_S

sinclude(../kpathsea/withenable.ac)

# If libm is present, use it.
AC_CHECK_LIB(m, main,LIBS="$LIBS -lm")

AC_OUTPUT(Makefile)
date >stamp-auto
