dnl Process this file with autoconf to produce a configure script.
AC_INIT(mkind.c)

AC_CONFIG_HEADER(c-auto.h:c-auto.in)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_LN_S

sinclude(../kpathsea/withenable.ac)

AC_ARG_PROGRAM
AC_HAVE_HEADERS(ctype.h types.h locale.h)
AC_CHECK_FUNCS(strchr strrchr setlocale)

AC_OUTPUT(Makefile)

dnl update `stamp-auto' since we just remade `c-auto.h'
date >stamp-auto
