pkginclude_HEADERS += $(top_srcdir)/include/FileFont.h
pkginclude_HEADERS += $(top_srcdir)/include/Font.h
pkginclude_HEADERS += $(top_srcdir)/include/GraphiteProcess.h
pkginclude_HEADERS += $(top_srcdir)/include/GrAppData.h
pkginclude_HEADERS += $(top_srcdir)/include/GrClient.h
pkginclude_HEADERS += $(top_srcdir)/include/GrCommon.h
pkginclude_HEADERS += $(top_srcdir)/include/GrConstants.h
pkginclude_HEADERS += $(top_srcdir)/include/GrData.h
pkginclude_HEADERS += $(top_srcdir)/include/GrDebug.h
pkginclude_HEADERS += $(top_srcdir)/include/GrExt.h
pkginclude_HEADERS += $(top_srcdir)/include/GrFeature.h
pkginclude_HEADERS += $(top_srcdir)/include/GrMstypes.h
pkginclude_HEADERS += $(top_srcdir)/include/GrPlatform.h
pkginclude_HEADERS += $(top_srcdir)/include/GrResult.h
pkginclude_HEADERS += $(top_srcdir)/include/GrStructs.h
pkginclude_HEADERS += $(top_srcdir)/include/GrWrappers.h
pkginclude_HEADERS += $(top_srcdir)/include/IGraphiteProcess.h
pkginclude_HEADERS += $(top_srcdir)/include/IGrEngine.h
pkginclude_HEADERS += $(top_srcdir)/include/IGrJustifier.h
pkginclude_HEADERS += $(top_srcdir)/include/ITextSource.h
pkginclude_HEADERS += $(top_srcdir)/include/SegmentAux.h
pkginclude_HEADERS += $(top_srcdir)/include/Segment.h
pkginclude_HEADERS += $(top_srcdir)/include/SegmentPainter.h

EXTRA_DIST += $(top_srcdir)/include/BinTree.h
EXTRA_DIST += $(top_srcdir)/include/GenericResource.h
EXTRA_DIST += $(top_srcdir)/include/HashMap.h
              
