DIST_COMMON = Makefile.in
EXTRA_DIST =
bin_PROGRAMS = dvipdfmx
bin_SCRIPTS =
dvipdfmx_SOURCES = agl.c cff.c cff_dict.c cid.c cidtype0.c cidtype2.c \
cmap.c cmap_parse.c colorsp.c cs_type2.c dpxcrypt.c dpxutil.c dvi.c \
dvipdfmx.c encodings.c epdf.c error.c fontmap.c htex.c jpegimage.c mem.c \
mfileio.c mpost.c numbers.c pdfdev.c pdfdoc.c pdfencrypt.c pdfobj.c \
pdfparse.c pdfresource.c pdfspecial.c pkfont.c pngimage.c psimage.c psspecial.c \
pst.c pst_obj.c sfnt.c subfont.c t1crypt.c tfm.c thumbnail.c tpic.c \
tt_aux.c tt_build.c tt_cmap.c tt_gsub.c tt_table.c ttf.c type0.c \
type1.c type1c.c unicode.c vf.c agl.h asl_charset.h cff.h cff_dict.h cff_limits.h \
cff_stdstr.h cff_types.h cid.h cid_basefont.h cid_p.h \
cidtype0.h cidtype2.h cmap.h cmap_parse.h colors.h colorsp.h \
cs_type2.h dpxcrypt.h dpxutil.h dvi.h dvicodes.h encodings.h \
encodings_p.h epdf.h error.h fontmap.h htex.h jpegimage.h macglyphs.h \
mem.h mfileio.h mpost.h numbers.h pdfdev.h pdfdoc.h pdfencrypt.h pdflimits.h \
pdfobj.h pdfparse.h pdfresource.h pdfspecial.h pkfont.h pngimage.h \
psimage.h psspecial.h pst.h pst_obj.h sfnt.h subfont.h \
system.h t1crypt.h tfm.h thumbnail.h tpic.h tt_aux.h tt_build.h tt_cmap.h \
tt_gsub.h tt_table.h ttf.h twiddle.h type0.h type1.h type1c.h unicode.h vf.h
